--- a/pages/footer.html
+++ b/pages/footer.html
@@ -8,7 +8,36 @@
     <title>Document</title>
 </head>
 <body>
-    
+     <header>
+
+    </header>
+    <main>
+
+    </main>
+    <footer class="footer">
+        <div class="container text-center">
+            <div class="row align-items-end">
+                <div class="col">
+                    <p>Textos legales</p>
+                    <p>Política de cookies</p>
+                    <p>Política de privacidad</p>
+                    <p>Política de calidad</p>
+
+                </div>
+                <div class="col">
+                    <img src="../images/logoLosTresFogonesSelectos.png" alt="Logo Los Tres Fogones Selectos">
+                </div>
+                <div class="col">
+                    <div class="icons">
+                        <img src="/images/facebook-brands-solid-full.svg" alt="Facebook">
+                        <img src="/images/instagram-brands-solid-full.svg" alt="Instagram">
+                        <img src="/images/tiktok-brands-solid-full.svg" alt="Tiktok">
+                        <img src="/images/twitter-brands-solid-full.svg" alt="Twiter">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
