--- a/pages/footer.html
+++ b/pages/footer.html
@@ -8,31 +8,29 @@
     <title>Document</title>
 </head>
 <body>
-     <header>
-
-    </header>
-    <main>
-
-    </main>
-    <footer class="footer">
+ <footer class="footer">
+        <div class="topFooter">
         <div class="container text-center">
             <div class="row align-items-end">
+                <div class="col">
+                    <p><b>Dirección</b></p>
+                    <p>Calle Real, nº12</p>
+                    <p>08003 - Barcelona</p>
+                    <img src="/images/icons8-incoming-call-24.png" alt=""><p>(+34) 923 526 366</p>
+                </div>
+                <div class="col">
+                    <img class="logofooter" src="../images/logoLosTresFogonesSelectos.png" alt="Logo Los Tres Fogones Selectos">
+                </div>
                 <div class="col">
                     <p>Textos legales</p>
                     <p>Política de cookies</p>
                     <p>Política de privacidad</p>
                     <p>Política de calidad</p>
-
-                </div>
-                <div class="col">
-                    <img src="../images/logoLosTresFogonesSelectos.png" alt="Logo Los Tres Fogones Selectos">
-                </div>
-                <div class="col">
                     <div class="icons">
-                        <img src="/images/facebook-brands-solid-full.svg" alt="Facebook">
-                        <img src="/images/instagram-brands-solid-full.svg" alt="Instagram">
-                        <img src="/images/tiktok-brands-solid-full.svg" alt="Tiktok">
-                        <img src="/images/twitter-brands-solid-full.svg" alt="Twiter">
+                        <img src="/images/icons8-facebook-nuevo-16.png" alt="Facebook">
+                        <img src="/images/icons8-instagram-16.png" alt="Instagram">
+                        <img src="/images/icons8-tik-tok-16.png" alt="Tiktok">
+                        <img src="/images/icons8-x-16.png" alt="X">
                     </div>
                 </div>
             </div>
