--- a/pages/footer.html
+++ b/pages/footer.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <title>Document</title>
+        <link rel="stylesheet" href="/css/footer.css">
+        <title>Document</title>
 </head>
 <body>
- <footer class="footer">
+<footer class="footer">
         <div class="topFooter">
         <div class="container text-center">
             <div class="row align-items-end">
@@ -25,7 +26,6 @@
                     <p>Textos legales</p>
                     <p>Política de cookies</p>
                     <p>Política de privacidad</p>
-                    <p>Política de calidad</p>
                     <div class="icons">
                         <img src="/images/icons8-facebook-nuevo-16.png" alt="Facebook">
                         <img src="/images/icons8-instagram-16.png" alt="Instagram">
