--- a/pages/footer.html
+++ b/pages/footer.html
@@ -10,9 +10,8 @@
 </head>
 <body>
 <footer class="footer">
-        <div class="topFooter">
         <div class="container text-center">
-            <div class="row align-items-end">
+            <div class="row align-items-center">
                 <div class="col">
                     <p><b>Dirección</b></p>
                     <p>Calle Real, nº12</p>
@@ -34,7 +33,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
