--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -48,7 +48,9 @@
                 <img src="/images/albertoPhoto.png" alt="">
                 <div class="cardContent">
                     <h3>ALBERTO</h3>
-                    <p>descripcion un poco de nosotros</p>
+                    <p>Alberto es el jefe de nuestra tienda, se centra enla experiencia del cliente y la gestion del
+                        personal, el control del inventario,con un enfeque especial en el conocimiento de productos de
+                        alta calidad y la atención personalizada.</p>
                 </div>
             </div>
 
@@ -56,15 +58,19 @@
                 <img src="/images/Javier.png" alt="">
                 <div class="cardContent">
                     <h3>JAVIER</h3>
-                    <p>Javier es nuestro increíble relaciones públicas. Su trato es inmejorable tanto con clientes como con proveedores.Los clientes lo adoran por su trato jovial y encantador donde aconseja en todo lo necesario a los clientes.</p>
+                    <p>Javier es nuestro increíble relaciones públicas. Su trato es inmejorable tanto con clientes como
+                        con proveedores.Los clientes lo adoran por su trato jovial y encantador donde aconseja en todo
+                        lo necesario a los clientes.</p>
                 </div>
             </div>
 
             <div class="card">
-                <img src="/images/albertoPhoto.png" alt="">
+                <img src="/images/hectorPhoto.jpg" alt="">
                 <div class="cardContent">
                     <h3>HECTOR</h3>
-                    <p>descripcion un poco de nosotros</p>
+                    <p>Hector es un auténtico maestro afinador de quesos,con un conocimiento profundo que abarca una
+                        selección perfecta, donde se encarga de su afinado, maduración y maridaje.Todo ello lo completa
+                        con un asesoramiento personalizado.</p>
                 </div>
             </div>
 
@@ -84,8 +90,9 @@
                 <img src="/images/heberPhoto.png" alt="">
                 <div class="cardContent">
                     <h3>HEBER PARIS</h3>
-                    <p>Entre sus increíbles habilidades en la tienda, añadimos varios premios del Campeonato de España
-                        de cortador de jamón, lo cual ya lo sitúa en la élite de los cortadores mundiales.
+                    <p>Entre sus increíbles habilidades se encuentran varios premios del Campeonato de España de
+                        cortador de jamón, lo cual ya lo sitúa en la élite de los cortadores mundiales, aparte de ser un
+                        grandísimo sumiller, que os ayudar con vuestras elecciones.
                     </p>
                 </div>
             </div>
