--- a/pages/footer.html
+++ b/pages/footer.html
@@ -26,10 +26,10 @@
                     <p>Política de cookies</p>
                     <p>Política de privacidad</p>
                     <div class="icons">
-                        <img src="/images/icons8-facebook-nuevo-16.png" alt="Facebook">
-                        <img src="/images/icons8-instagram-16.png" alt="Instagram">
-                        <img src="/images/icons8-tik-tok-16.png" alt="Tiktok">
-                        <img src="/images/icons8-x-16.png" alt="X">
+                        <a href="https://www.facebook.com/?locale=es_ES"><img src="/images/icons8-facebook-nuevo-16.png" alt="Facebook"></a>
+                        <a href="https://www.instagram.com/"><img src="/images/icons8-instagram-16.png" alt="Instagram"></a>
+                        <a href="https://www.tiktok.com/login?lang=es-419&redirect_url=https%3A%2F%2Fwww.tiktok.com%2Fupload%3Flang%3Des"><img src="/images/icons8-tik-tok-16.png" alt="Tiktok"></a>
+                        <a href="https://x.com/?lang=es"><img src="/images/icons8-x-16.png" alt="X"></a>
                     </div>
                 </div>
             </div>
