feat:Create a PDF folder containing legal texts

--- a/pages/footer.html
+++ b/pages/footer.html
@@ -22,7 +22,7 @@
                     <img class="logofooter" src="../images/logoLosTresFogonesSelectos.png" alt="Logo Los Tres Fogones Selectos">
                 </div>
                 <div class="col">
-                    <p>Textos legales</p>
+                    <p>Condiciones generales de venta</p>
                     <p>Política de cookies</p>
                     <p>Política de privacidad</p>
                     <div class="icons">
