styles: icons and legal texts

--- a/pages/footer.html
+++ b/pages/footer.html
@@ -22,9 +22,9 @@
                     <img class="logofooter" src="../images/logoLosTresFogonesSelectos.png" alt="Logo Los Tres Fogones Selectos">
                 </div>
                 <div class="col">
-                    <p>Condiciones generales de venta</p>
-                    <p>Política de cookies</p>
-                    <p>Política de privacidad</p>
+                    <a href="/pdf/condicionesGeneralesVenta.pdf"><p>Condiciones generales de venta</p></a>
+                    <a href="/pdf/politicaCookies.pdf"><p>Política de cookies</p></a>
+                    <a href="/pdf/politicaPrivacidadDatos.pdf"><p>Política de privacidad</p></a>
                     <div class="icons">
                         <a href="https://www.facebook.com/?locale=es_ES"><img src="/images/icons8-facebook-nuevo-16.png" alt="Facebook"></a>
                         <a href="https://www.instagram.com/"><img src="/images/icons8-instagram-16.png" alt="Instagram"></a>
