feat:add copyright paragraph

--- a/pages/footer.html
+++ b/pages/footer.html
@@ -20,6 +20,7 @@
                 </div>
                 <div class="col">
                     <img class="logofooter" src="../images/logoLosTresFogonesSelectos.png" alt="Logo Los Tres Fogones Selectos">
+                    <p class="Copyright">Copyright © 2025. | Todos los derechos reservados. | www.LosTresFogonesSelectos.es</p>
                 </div>
                 <div class="col">
                     <a href="/pdf/condicionesGeneralesVenta.pdf"><p>Condiciones generales de venta</p></a>
