post:create new list cardwork

--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -20,7 +20,27 @@
 
 
 
+            <div class="cardwork">
+            <div class="card">
+                <img src="/images/albertoQhesse.png" alt="">
+            </div>
+            <div class="card">
+                <img src="/images/javiAtention.png" alt="">
+            </div>
+            <div class="card">
+                <img src="/images/hectorMasterCheese.png" alt="">
+            </div>
+            <div class="card">
+                <img src="/images/mariaMermelate.png" alt="">
+                </div>
+            <div class="card">
+                <img src="/images/heberCutHam.png" alt="">
+                </div>
+        </div>
+        
+
         <div class="textHistory">
+
             <p>
                 Nuestra tienda nació de una idea clara: crear un espacio donde cada producto cuente una historia y cada
                 sabor sea una experiencia. No empezamos con un gran local ni con estanterías llenas, sino con una
@@ -37,6 +57,7 @@
                 acercar lo mejor del mundo gourmet a personas que valoran la calidad, el detalle y el placer de comer
                 bien.
             </p>
+
         </div>
 
 
