patch:image hectorphoto1

--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -86,7 +86,7 @@
             </div>
 
             <div class="card">
-                <img src="/images/hectorPhoto.jpg" alt="">
+                <img src="/images/hectorPhoto1.png" alt="">
                 <div class="cardContent">
                     <h3>HECTOR</h3>
                     <p>Hector es un auténtico maestro afinador de quesos,con un conocimiento profundo que abarca una
