--- a/pages/footer.html
+++ b/pages/footer.html
@@ -18,19 +18,19 @@
                     <p>08003 - Barcelona</p>
                     <img src="/images/icons8-incoming-call-24.png" alt=""><p>(+34) 923 526 366</p>
                 </div>
-                <div class="col">
+                <div class="col col-logo">
                     <img class="logofooter" src="../images/logoLosTresFogonesSelectos.png" alt="Logo Los Tres Fogones Selectos">
                     <p class="Copyright">Copyright © 2025. | Todos los derechos reservados. | www.LosTresFogonesSelectos.es</p>
                 </div>
                 <div class="col">
-                    <a href="/pdf/condicionesGeneralesVenta.pdf"><p>Condiciones generales de venta</p></a>
-                    <a href="/pdf/politicaCookies.pdf"><p>Política de cookies</p></a>
-                    <a href="/pdf/politicaPrivacidadDatos.pdf"><p>Política de privacidad</p></a>
+                    <a href="/pdf/condicionesGeneralesVenta.pdf" target="_blank"><p>Condiciones generales de venta</p></a>
+                    <a href="/pdf/politicaCookies.pdf" target="_blank"><p>Política de cookies</p></a>
+                    <a href="/pdf/politicaPrivacidadDatos.pdf" target="_blank"><p>Política de privacidad</p></a>
                     <div class="icons">
-                        <a href="https://www.facebook.com/?locale=es_ES"><img src="/images/icons8-facebook-nuevo-16.png" alt="Facebook"></a>
-                        <a href="https://www.instagram.com/"><img src="/images/icons8-instagram-16.png" alt="Instagram"></a>
-                        <a href="https://www.tiktok.com/login?lang=es-419&redirect_url=https%3A%2F%2Fwww.tiktok.com%2Fupload%3Flang%3Des"><img src="/images/icons8-tik-tok-16.png" alt="Tiktok"></a>
-                        <a href="https://x.com/?lang=es"><img src="/images/icons8-x-16.png" alt="X"></a>
+                        <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><img src="/images/icons8-facebook-nuevo-16.png" alt="Facebook"></a>
+                        <a href="https://www.instagram.com/" target="_blank"><img src="/images/icons8-instagram-16.png" alt="Instagram"></a>
+                        <a href="https://www.tiktok.com/login?lang=es-419&redirect_url=https%3A%2F%2Fwww.tiktok.com%2Fupload%3Flang%3Des" target="_blank"><img src="/images/icons8-tik-tok-16.png" alt="Tiktok"></a>
+                        <a href="https://x.com/?lang=es"><img src="/images/icons8-x-16.png" alt="X" target="_blank"></a>
                     </div>
                 </div>
             </div>
