patch:change email

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -25,7 +25,7 @@
     <section class="formulary">
         <h1>FORMULARIO DE CONTACTO</h1>
 
-        <form action="mailto:alt.rm-7ooc0v55@yopmail.com" method="post" enctype="text/plain">
+        <form action="mailto:lostresfogonesselectos@gmail.com" method="post" enctype="text/plain">
             
             <label>Nombre:</label>
             <input type="text" name="name" required>
