feat: I add div wrapper tag that allows center all content page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>Los Tres Fogones Selectos || Inicio</title>
   </head>
   <body>
+    <div class="wrapperPage">
+      <div class="wraperHeaderBanner">
+        
+      </div>
+    </div>
     <header></header>
-    <main></main>
+    <main>
+    </main>
     <footer></footer>
   </body>
 </html>
