feat: I add a banner hero section with call to action button

--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
   <body>
     <div class="wrapperPage">
       <div class="wraperHeaderBanner">
-        
+        <header></header>
+        <section class="banner">
+          <div class="bannerContent">
+            <h1>Arte en cada bocado</h1>
+            <p>
+              Conservas hechas a mano, vinos con carácter y fiambres premium
+              para quienes valoran la excelencia en la gastronomía
+            </p>
+            <a href="">Comprar ahora</a>
+          </div>
+        </section>
+        <main></main>
+        <footer></footer>
       </div>
     </div>
-    <header></header>
-    <main>
-    </main>
-    <footer></footer>
   </body>
 </html>
