--- a/index.html
+++ b/index.html
@@ -19,7 +19,73 @@
             <a href="">Comprar ahora</a>
           </div>
         </section>
-        <main></main>
+        <main>
+          <section>
+            <h2>Productos Destacados</h2>
+            <div class="gridProducts">
+              <figure class="productNew" data-type="jamon">
+                <div class="scaleProduct">
+                  <img src="images/whiteWineClaire.jpg" alt="" />
+                </div>
+                <figcaption class="productInfo">
+                  <h3>Vino blanco Claire</h3>
+                  <p>52,33€</p>
+                  <a href="">Añadir al carrito</a>
+                </figcaption>
+              </figure>
+              <figure class="productNew" data-type="jamon">
+                <div class="scaleProduct">
+                  <img src="images/whiteWineEtoile.jpg" alt="" />
+                </div>
+                <figcaption class="productInfo">
+                  <h3>Vino blanco Etoile</h3>
+                  <p>52,33€</p>
+                  <a href="">Añadir al carrito</a>
+                </figcaption>
+              </figure>
+              <figure class="productNew" data-type="jamon">
+                <div class="scaleProduct">
+                  <img src="images/whiteWineSolstice.jpg" alt="" />
+                </div>
+                <figcaption class="productInfo">
+                  <h3>Vino blanco Solstice</h3>
+                  <p>52,33€</p>
+                  <a href="">Añadir al carrito</a>
+                </figcaption>
+              </figure>
+              <figure class="productNew" data-type="jamon">
+                <div class="scaleProduct">
+                  <img src="images/redWineAurora.jpg" alt="" />
+                </div>
+                <figcaption class="productInfo">
+                  <h3>Vino tinto Aurora</h3>
+                  <p>52,33€</p>
+                  <a href="">Añadir al carrito</a>
+                </figcaption>
+              </figure>
+              <figure class="productNew" data-type="jamon">
+                <div class="scaleProduct">
+                  <img src="images/redWineMedianoche.jpg" alt="" />
+                </div>
+                <figcaption class="productInfo">
+                  <h3>Vino tinto Medianoche</h3>
+                  <p>52,33€</p>
+                  <a href="">Añadir al carrito</a>
+                </figcaption>
+              </figure>
+              <figure class="productNew" data-type="vinos">
+                <div class="scaleProduct">
+                  <img src="images/roxanneCaviar.jpg" alt="" />
+                </div>
+                <figcaption class="productInfo">
+                  <h3>Carne de Centollo</h3>
+                  <p>52,33€</p>
+                  <a href="">Añadir al carrito</a>
+                </figcaption>
+              </figure>
+            </div>
+          </section>
+        </main>
         <footer></footer>
       </div>
     </div>
