feat: I add new section of offers on our products.

--- a/index.html
+++ b/index.html
@@ -78,12 +78,47 @@
                   <img src="images/roxanneCaviar.jpg" alt="" />
                 </div>
                 <figcaption class="productInfo">
-                  <h3>Carne de Centollo</h3>
+                  <h3>Caviar</h3>
                   <p>52,33€</p>
                   <a href="">Añadir al carrito</a>
                 </figcaption>
               </figure>
             </div>
+          </section>
+          <section>
+            <h2>Nuestras Ofertas</h2>
+            <div class="gridProducts">
+              <figure class="productNew" data-type="vinos">
+                <div class="scaleProduct">
+                  <img src="images/whiteWineClaire.jpg" alt="" />
+                </div>
+                <figcaption class="productInfo">
+                  <h3>Vino blanco Claire</h3>
+                  <p>52,33€</p>
+                  <a href="">Añadir al carrito</a>
+                </figcaption>
+              </figure>
+            </div>
+            <figure class="productNew" data-type="vinos">
+              <div class="scaleProduct">
+                <img src="images/redWineAurora.jpg" alt="" />
+              </div>
+              <figcaption class="productInfo">
+                <h3>Vino tinto Aurora</h3>
+                <p>52,33€</p>
+                <a href="">Añadir al carrito</a>
+              </figcaption>
+            </figure>
+            <figure class="productNew" data-type="vinos">
+              <div class="scaleProduct">
+                <img src="images/cannedOctopus.jpg" alt="" />
+              </div>
+              <figcaption class="productInfo">
+                <h3>Conserva Pulpo</h3>
+                <p>52,33€</p>
+                <a href="">Añadir al carrito</a>
+              </figcaption>
+            </figure>
           </section>
         </main>
         <footer></footer>
