feat: I add new section of opinion of our clients. It will be a carrousel.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,52 @@
               </figcaption>
             </figure>
           </section>
+          <section>
+            <h2>Opiniones de nuestros clientes</h2>
+            <div class="carruselOpinions">
+              <div class="slidesOpinions" id="slidesOpinions">
+                <article class="opinion">
+                  <img src="images/avatar.jpeg" alt="" />
+                  <h3>Ana</h3>
+                  <p>
+                    El servicio fue excelente. Me entregaron todo antes del
+                    plazo y la comunicación fue muy clara durante todo el
+                    proceso.
+                  </p>
+                  <footer>⭐⭐⭐⭐⭐</footer>
+                </article>
+                <article class="opinion">
+                  <img src="images/avatar.jpeg" alt="" />
+                  <h3>Carlos</h3>
+                  <p>
+                    Realmente quedé sorprendido con la calidad. Se nota la
+                    dedicación y el profesionalismo en cada detalle.
+                  </p>
+                  <footer>⭐⭐⭐⭐⭐</footer>
+                </article>
+                <article class="opinion">
+                  <img src="images/avatar.jpeg" alt="" />
+                  <h3>Maria</h3>
+                  <p>
+                    Precio justo, atención rápida y trabajo impecable. Lo
+                    recomiendo al 100%.
+                  </p>
+                  <footer>⭐⭐⭐⭐⭐</footer>
+                </article>
+                <article class="opinion">
+                  <img src="images/avatar.jpeg" alt="" />
+                  <h3>Pedro</h3>
+                  <p>
+                    Muy buen trato y excelente producto final. Todo salió tal
+                    como lo habíamos planificado.
+                  </p>
+                  <footer>⭐⭐⭐⭐⭐</footer>
+                </article>
+              </div>
+              <button id="previousButton"></button>
+              <button id="nextButton"></button>
+            </div>
+          </section>
         </main>
         <footer></footer>
       </div>
