feat: I add a alt description of each image.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
           <section>
             <h2>Productos Destacados</h2>
             <div class="gridProducts">
-              <figure class="productNew" data-type="jamon">
+              <figure class="productNew" data-type="whiteWine">
                 <div class="scaleProduct">
-                  <img src="images/whiteWineClaire.jpg" alt="" />
+                  <img src="images/whiteWineClaire.jpg" alt="Imagen de una botella de vino blanco con marca Claire." />
                 </div>
                 <figcaption class="productInfo">
                   <h3>Vino blanco Claire</h3>
@@ -33,9 +33,9 @@
                   <a href="">Añadir al carrito</a>
                 </figcaption>
               </figure>
-              <figure class="productNew" data-type="jamon">
+              <figure class="productNew" data-type="whiteWine">
                 <div class="scaleProduct">
-                  <img src="images/whiteWineEtoile.jpg" alt="" />
+                  <img src="images/whiteWineEtoile.jpg" alt="Imagen de una botella de vino blanco con marca Etoile." />
                 </div>
                 <figcaption class="productInfo">
                   <h3>Vino blanco Etoile</h3>
@@ -43,9 +43,9 @@
                   <a href="">Añadir al carrito</a>
                 </figcaption>
               </figure>
-              <figure class="productNew" data-type="jamon">
+              <figure class="productNew" data-type="whiteWine">
                 <div class="scaleProduct">
-                  <img src="images/whiteWineSolstice.jpg" alt="" />
+                  <img src="images/whiteWineSolstice.jpg" alt="Imagen de una botella de vino blanco con marca Solstice." />
                 </div>
                 <figcaption class="productInfo">
                   <h3>Vino blanco Solstice</h3>
@@ -53,9 +53,9 @@
                   <a href="">Añadir al carrito</a>
                 </figcaption>
               </figure>
-              <figure class="productNew" data-type="jamon">
+              <figure class="productNew" data-type="redWine">
                 <div class="scaleProduct">
-                  <img src="images/redWineAurora.jpg" alt="" />
+                  <img src="images/redWineAurora.jpg" alt="Imagen de una botella de vino tinto con marca Aurora." />
                 </div>
                 <figcaption class="productInfo">
                   <h3>Vino tinto Aurora</h3>
@@ -63,9 +63,9 @@
                   <a href="">Añadir al carrito</a>
                 </figcaption>
               </figure>
-              <figure class="productNew" data-type="jamon">
+              <figure class="productNew" data-type="redWine">
                 <div class="scaleProduct">
-                  <img src="images/redWineMedianoche.jpg" alt="" />
+                  <img src="images/redWineMedianoche.jpg" alt="Imagen de una botella de vino tinto con marca Medianoche." />
                 </div>
                 <figcaption class="productInfo">
                   <h3>Vino tinto Medianoche</h3>
@@ -73,9 +73,9 @@
                   <a href="">Añadir al carrito</a>
                 </figcaption>
               </figure>
-              <figure class="productNew" data-type="vinos">
+              <figure class="productNew" data-type="otherProducts">
                 <div class="scaleProduct">
-                  <img src="images/roxanneCaviar.jpg" alt="" />
+                  <img src="images/roxanneCaviar.jpg" alt="Imagen de una lata de conservas de caviar." />
                 </div>
                 <figcaption class="productInfo">
                   <h3>Caviar</h3>
@@ -90,7 +90,7 @@
             <div class="gridProducts">
               <figure class="productNew" data-type="vinos">
                 <div class="scaleProduct">
-                  <img src="images/whiteWineClaire.jpg" alt="" />
+                  <img src="images/whiteWineClaire.jpg" alt="Imagen de una botella de vino blanco con marca Claire." />
                 </div>
                 <figcaption class="productInfo">
                   <h3>Vino blanco Claire</h3>
@@ -101,7 +101,7 @@
             </div>
             <figure class="productNew" data-type="vinos">
               <div class="scaleProduct">
-                <img src="images/redWineAurora.jpg" alt="" />
+                <img src="images/redWineAurora.jpg" alt="Imagen de una botella de vino tinto con marca Aurora." />
               </div>
               <figcaption class="productInfo">
                 <h3>Vino tinto Aurora</h3>
@@ -111,7 +111,7 @@
             </figure>
             <figure class="productNew" data-type="vinos">
               <div class="scaleProduct">
-                <img src="images/cannedOctopus.jpg" alt="" />
+                <img src="images/cannedOctopus.jpg" alt="Imagen de una lata de conservas de pulpo." />
               </div>
               <figcaption class="productInfo">
                 <h3>Conserva Pulpo</h3>
@@ -125,7 +125,7 @@
             <div class="carruselOpinions">
               <div class="slidesOpinions" id="slidesOpinions">
                 <article class="opinion">
-                  <img src="images/avatar.jpeg" alt="" />
+                  <img src="images/avatar.jpeg" alt="Imagen de un avatar que representa cada uno de nuestros clientes." />
                   <h3>Ana</h3>
                   <p>
                     El servicio fue excelente. Me entregaron todo antes del
@@ -135,7 +135,7 @@
                   <footer>⭐⭐⭐⭐⭐</footer>
                 </article>
                 <article class="opinion">
-                  <img src="images/avatar.jpeg" alt="" />
+                  <img src="images/avatar.jpeg" alt="Imagen de un avatar que representa cada uno de nuestros clientes." />
                   <h3>Carlos</h3>
                   <p>
                     Realmente quedé sorprendido con la calidad. Se nota la
@@ -144,7 +144,7 @@
                   <footer>⭐⭐⭐⭐⭐</footer>
                 </article>
                 <article class="opinion">
-                  <img src="images/avatar.jpeg" alt="" />
+                  <img src="images/avatar.jpeg" alt="Imagen de un avatar que representa cada uno de nuestros clientes." />
                   <h3>Maria</h3>
                   <p>
                     Precio justo, atención rápida y trabajo impecable. Lo
@@ -153,7 +153,7 @@
                   <footer>⭐⭐⭐⭐⭐</footer>
                 </article>
                 <article class="opinion">
-                  <img src="images/avatar.jpeg" alt="" />
+                  <img src="images/avatar.jpeg" alt="Imagen de un avatar que representa cada uno de nuestros clientes." />
                   <h3>Pedro</h3>
                   <p>
                     Muy buen trato y excelente producto final. Todo salió tal
