--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Los Tres Fogones Selectos || Inicio</title>
+    <link rel="stylesheet" href="css/reset.css" />
   </head>
   <body>
     <div class="wrapperPage">
@@ -19,89 +20,56 @@
             <a href="">Comprar ahora</a>
           </div>
         </section>
-        <main>
-          <section>
-            <h2>Productos Destacados</h2>
-            <div class="gridProducts">
-              <figure class="productNew" data-type="whiteWine">
-                <div class="scaleProduct">
-                  <img src="images/whiteWineClaire.jpg" alt="Imagen de una botella de vino blanco con marca Claire." />
-                </div>
-                <figcaption class="productInfo">
-                  <h3>Vino blanco Claire</h3>
-                  <p>52,33€</p>
-                  <a href="">Añadir al carrito</a>
-                </figcaption>
-              </figure>
-              <figure class="productNew" data-type="whiteWine">
-                <div class="scaleProduct">
-                  <img src="images/whiteWineEtoile.jpg" alt="Imagen de una botella de vino blanco con marca Etoile." />
-                </div>
-                <figcaption class="productInfo">
-                  <h3>Vino blanco Etoile</h3>
-                  <p>52,33€</p>
-                  <a href="">Añadir al carrito</a>
-                </figcaption>
-              </figure>
-              <figure class="productNew" data-type="whiteWine">
-                <div class="scaleProduct">
-                  <img src="images/whiteWineSolstice.jpg" alt="Imagen de una botella de vino blanco con marca Solstice." />
-                </div>
-                <figcaption class="productInfo">
-                  <h3>Vino blanco Solstice</h3>
-                  <p>52,33€</p>
-                  <a href="">Añadir al carrito</a>
-                </figcaption>
-              </figure>
-              <figure class="productNew" data-type="redWine">
-                <div class="scaleProduct">
-                  <img src="images/redWineAurora.jpg" alt="Imagen de una botella de vino tinto con marca Aurora." />
-                </div>
-                <figcaption class="productInfo">
-                  <h3>Vino tinto Aurora</h3>
-                  <p>52,33€</p>
-                  <a href="">Añadir al carrito</a>
-                </figcaption>
-              </figure>
-              <figure class="productNew" data-type="redWine">
-                <div class="scaleProduct">
-                  <img src="images/redWineMedianoche.jpg" alt="Imagen de una botella de vino tinto con marca Medianoche." />
-                </div>
-                <figcaption class="productInfo">
-                  <h3>Vino tinto Medianoche</h3>
-                  <p>52,33€</p>
-                  <a href="">Añadir al carrito</a>
-                </figcaption>
-              </figure>
-              <figure class="productNew" data-type="otherProducts">
-                <div class="scaleProduct">
-                  <img src="images/roxanneCaviar.jpg" alt="Imagen de una lata de conservas de caviar." />
-                </div>
-                <figcaption class="productInfo">
-                  <h3>Caviar</h3>
-                  <p>52,33€</p>
-                  <a href="">Añadir al carrito</a>
-                </figcaption>
-              </figure>
-            </div>
-          </section>
-          <section>
-            <h2>Nuestras Ofertas</h2>
-            <div class="gridProducts">
-              <figure class="productNew" data-type="vinos">
-                <div class="scaleProduct">
-                  <img src="images/whiteWineClaire.jpg" alt="Imagen de una botella de vino blanco con marca Claire." />
-                </div>
-                <figcaption class="productInfo">
-                  <h3>Vino blanco Claire</h3>
-                  <p>52,33€</p>
-                  <a href="">Añadir al carrito</a>
-                </figcaption>
-              </figure>
-            </div>
-            <figure class="productNew" data-type="vinos">
+      </div>
+      <main>
+        <section>
+          <h2>Productos Destacados</h2>
+          <div class="gridProducts">
+            <figure class="productNew" data-type="whiteWine">
               <div class="scaleProduct">
-                <img src="images/redWineAurora.jpg" alt="Imagen de una botella de vino tinto con marca Aurora." />
+                <img
+                  src="images/whiteWineClaire.jpg"
+                  alt="Imagen de una botella de vino blanco con marca Claire."
+                />
+              </div>
+              <figcaption class="productInfo">
+                <h3>Vino blanco Claire</h3>
+                <p>52,33€</p>
+                <a href="">Añadir al carrito</a>
+              </figcaption>
+            </figure>
+            <figure class="productNew" data-type="whiteWine">
+              <div class="scaleProduct">
+                <img
+                  src="images/whiteWineEtoile.jpg"
+                  alt="Imagen de una botella de vino blanco con marca Etoile."
+                />
+              </div>
+              <figcaption class="productInfo">
+                <h3>Vino blanco Etoile</h3>
+                <p>52,33€</p>
+                <a href="">Añadir al carrito</a>
+              </figcaption>
+            </figure>
+            <figure class="productNew" data-type="whiteWine">
+              <div class="scaleProduct">
+                <img
+                  src="images/whiteWineSolstice.jpg"
+                  alt="Imagen de una botella de vino blanco con marca Solstice."
+                />
+              </div>
+              <figcaption class="productInfo">
+                <h3>Vino blanco Solstice</h3>
+                <p>52,33€</p>
+                <a href="">Añadir al carrito</a>
+              </figcaption>
+            </figure>
+            <figure class="productNew" data-type="redWine">
+              <div class="scaleProduct">
+                <img
+                  src="images/redWineAurora.jpg"
+                  alt="Imagen de una botella de vino tinto con marca Aurora."
+                />
               </div>
               <figcaption class="productInfo">
                 <h3>Vino tinto Aurora</h3>
@@ -109,66 +77,137 @@
                 <a href="">Añadir al carrito</a>
               </figcaption>
             </figure>
-            <figure class="productNew" data-type="vinos">
+            <figure class="productNew" data-type="redWine">
               <div class="scaleProduct">
-                <img src="images/cannedOctopus.jpg" alt="Imagen de una lata de conservas de pulpo." />
+                <img
+                  src="images/redWineMedianoche.jpg"
+                  alt="Imagen de una botella de vino tinto con marca Medianoche."
+                />
               </div>
               <figcaption class="productInfo">
-                <h3>Conserva Pulpo</h3>
+                <h3>Vino tinto Medianoche</h3>
                 <p>52,33€</p>
                 <a href="">Añadir al carrito</a>
               </figcaption>
             </figure>
-          </section>
-          <section>
-            <h2>Opiniones de nuestros clientes</h2>
-            <div class="carruselOpinions">
-              <div class="slidesOpinions" id="slidesOpinions">
-                <article class="opinion">
-                  <img src="images/avatar.jpeg" alt="Imagen de un avatar que representa cada uno de nuestros clientes." />
-                  <h3>Ana</h3>
-                  <p>
-                    El servicio fue excelente. Me entregaron todo antes del
-                    plazo y la comunicación fue muy clara durante todo el
-                    proceso.
-                  </p>
-                  <footer>⭐⭐⭐⭐⭐</footer>
-                </article>
-                <article class="opinion">
-                  <img src="images/avatar.jpeg" alt="Imagen de un avatar que representa cada uno de nuestros clientes." />
-                  <h3>Carlos</h3>
-                  <p>
-                    Realmente quedé sorprendido con la calidad. Se nota la
-                    dedicación y el profesionalismo en cada detalle.
-                  </p>
-                  <footer>⭐⭐⭐⭐⭐</footer>
-                </article>
-                <article class="opinion">
-                  <img src="images/avatar.jpeg" alt="Imagen de un avatar que representa cada uno de nuestros clientes." />
-                  <h3>Maria</h3>
-                  <p>
-                    Precio justo, atención rápida y trabajo impecable. Lo
-                    recomiendo al 100%.
-                  </p>
-                  <footer>⭐⭐⭐⭐⭐</footer>
-                </article>
-                <article class="opinion">
-                  <img src="images/avatar.jpeg" alt="Imagen de un avatar que representa cada uno de nuestros clientes." />
-                  <h3>Pedro</h3>
-                  <p>
-                    Muy buen trato y excelente producto final. Todo salió tal
-                    como lo habíamos planificado.
-                  </p>
-                  <footer>⭐⭐⭐⭐⭐</footer>
-                </article>
+            <figure class="productNew" data-type="otherProducts">
+              <div class="scaleProduct">
+                <img
+                  src="images/roxanneCaviar.jpg"
+                  alt="Imagen de una lata de conservas de caviar."
+                />
               </div>
-              <button id="previousButton"></button>
-              <button id="nextButton"></button>
+              <figcaption class="productInfo">
+                <h3>Caviar</h3>
+                <p>52,33€</p>
+                <a href="">Añadir al carrito</a>
+              </figcaption>
+            </figure>
+          </div>
+        </section>
+        <section>
+          <h2>Nuestras Ofertas</h2>
+          <div class="gridProducts">
+            <figure class="productNew" data-type="vinos">
+              <div class="scaleProduct">
+                <img
+                  src="images/whiteWineClaire.jpg"
+                  alt="Imagen de una botella de vino blanco con marca Claire."
+                />
+              </div>
+              <figcaption class="productInfo">
+                <h3>Vino blanco Claire</h3>
+                <p>52,33€</p>
+                <a href="">Añadir al carrito</a>
+              </figcaption>
+            </figure>
+          </div>
+          <figure class="productNew" data-type="vinos">
+            <div class="scaleProduct">
+              <img
+                src="images/redWineAurora.jpg"
+                alt="Imagen de una botella de vino tinto con marca Aurora."
+              />
             </div>
-          </section>
-        </main>
-        <footer></footer>
-      </div>
+            <figcaption class="productInfo">
+              <h3>Vino tinto Aurora</h3>
+              <p>52,33€</p>
+              <a href="">Añadir al carrito</a>
+            </figcaption>
+          </figure>
+          <figure class="productNew" data-type="vinos">
+            <div class="scaleProduct">
+              <img
+                src="images/cannedOctopus.jpg"
+                alt="Imagen de una lata de conservas de pulpo."
+              />
+            </div>
+            <figcaption class="productInfo">
+              <h3>Conserva Pulpo</h3>
+              <p>52,33€</p>
+              <a href="">Añadir al carrito</a>
+            </figcaption>
+          </figure>
+        </section>
+        <section>
+          <h2>Opiniones de nuestros clientes</h2>
+          <div class="carruselOpinions">
+            <div class="slidesOpinions" id="slidesOpinions">
+              <article class="opinion">
+                <img
+                  src="images/avatar.jpeg"
+                  alt="Imagen de un avatar que representa cada uno de nuestros clientes."
+                />
+                <h3>Ana</h3>
+                <p>
+                  El servicio fue excelente. Me entregaron todo antes del plazo
+                  y la comunicación fue muy clara durante todo el proceso.
+                </p>
+                <footer>⭐⭐⭐⭐⭐</footer>
+              </article>
+              <article class="opinion">
+                <img
+                  src="images/avatar.jpeg"
+                  alt="Imagen de un avatar que representa cada uno de nuestros clientes."
+                />
+                <h3>Carlos</h3>
+                <p>
+                  Realmente quedé sorprendido con la calidad. Se nota la
+                  dedicación y el profesionalismo en cada detalle.
+                </p>
+                <footer>⭐⭐⭐⭐⭐</footer>
+              </article>
+              <article class="opinion">
+                <img
+                  src="images/avatar.jpeg"
+                  alt="Imagen de un avatar que representa cada uno de nuestros clientes."
+                />
+                <h3>Maria</h3>
+                <p>
+                  Precio justo, atención rápida y trabajo impecable. Lo
+                  recomiendo al 100%.
+                </p>
+                <footer>⭐⭐⭐⭐⭐</footer>
+              </article>
+              <article class="opinion">
+                <img
+                  src="images/avatar.jpeg"
+                  alt="Imagen de un avatar que representa cada uno de nuestros clientes."
+                />
+                <h3>Pedro</h3>
+                <p>
+                  Muy buen trato y excelente producto final. Todo salió tal como
+                  lo habíamos planificado.
+                </p>
+                <footer>⭐⭐⭐⭐⭐</footer>
+              </article>
+            </div>
+            <button id="previousButton"></button>
+            <button id="nextButton"></button>
+          </div>
+        </section>
+      </main>
+      <footer></footer>
     </div>
   </body>
 </html>
