styles: I add some general styles including variables css. I create a index.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Los Tres Fogones Selectos || Inicio</title>
     <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
     <div class="wrapperPage">
