style: I add styles for higlight products and offer products with grid css. The styles are sharing in both sections.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Los Tres Fogones Selectos || Inicio</title>
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
     <div class="wrapperPage">
@@ -122,33 +122,34 @@
                 <a href="">Añadir al carrito</a>
               </figcaption>
             </figure>
+
+            <figure class="productNew" data-type="vinos">
+              <div class="scaleProduct">
+                <img
+                  src="images/redWineAurora.jpg"
+                  alt="Imagen de una botella de vino tinto con marca Aurora."
+                />
+              </div>
+              <figcaption class="productInfo">
+                <h3>Vino tinto Aurora</h3>
+                <p>52,33€</p>
+                <a href="">Añadir al carrito</a>
+              </figcaption>
+            </figure>
+            <figure class="productNew" data-type="vinos">
+              <div class="scaleProduct">
+                <img
+                  src="images/cannedOctopus.jpg"
+                  alt="Imagen de una lata de conservas de pulpo."
+                />
+              </div>
+              <figcaption class="productInfo">
+                <h3>Conserva Pulpo</h3>
+                <p>52,33€</p>
+                <a href="">Añadir al carrito</a>
+              </figcaption>
+            </figure>
           </div>
-          <figure class="productNew" data-type="vinos">
-            <div class="scaleProduct">
-              <img
-                src="images/redWineAurora.jpg"
-                alt="Imagen de una botella de vino tinto con marca Aurora."
-              />
-            </div>
-            <figcaption class="productInfo">
-              <h3>Vino tinto Aurora</h3>
-              <p>52,33€</p>
-              <a href="">Añadir al carrito</a>
-            </figcaption>
-          </figure>
-          <figure class="productNew" data-type="vinos">
-            <div class="scaleProduct">
-              <img
-                src="images/cannedOctopus.jpg"
-                alt="Imagen de una lata de conservas de pulpo."
-              />
-            </div>
-            <figcaption class="productInfo">
-              <h3>Conserva Pulpo</h3>
-              <p>52,33€</p>
-              <a href="">Añadir al carrito</a>
-            </figcaption>
-          </figure>
         </section>
         <section>
           <h2>Opiniones de nuestros clientes</h2>
