--- a/pages/footer.html
+++ b/pages/footer.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/footer.css">
+        <link rel="stylesheet" href="../css/footer.css">
         <title>Footer - Los Tres Fogones Selectos</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
                     <img src="/images/icons8-incoming-call-24.png" alt=""><p>(+34) 923 526 366</p>
                 </div>
                 <div class="col col-logo">
-                    <img class="logofooter" src="../images/logoLosTresFogonesSelectos.png" alt="Logo Los Tres Fogones Selectos">
+                    <img class="logofooter" src="/images/logoLosTresFogonesSelectos.png" alt="Logo Los Tres Fogones Selectos">
                     <p class="Copyright">Copyright © 2025. | Todos los derechos reservados. | www.LosTresFogonesSelectos.es</p>
                 </div>
                 <div class="col">
