feat: I add js file that charges content of each product dynamically. Also i add a json file that there are all data of products

--- a/index.html
+++ b/index.html
@@ -25,131 +25,11 @@
       <main>
         <section>
           <h2>Productos Destacados</h2>
-          <div class="gridProducts">
-            <figure class="productNew" data-type="whiteWine">
-              <div class="scaleProduct">
-                <img
-                  src="images/whiteWineClaire.jpg"
-                  alt="Imagen de una botella de vino blanco con marca Claire."
-                />
-              </div>
-              <figcaption class="productInfo">
-                <h3>Vino blanco Claire</h3>
-                <p>52,33€</p>
-                <a href="">Añadir al carrito</a>
-              </figcaption>
-            </figure>
-            <figure class="productNew" data-type="whiteWine">
-              <div class="scaleProduct">
-                <img
-                  src="images/whiteWineEtoile.jpg"
-                  alt="Imagen de una botella de vino blanco con marca Etoile."
-                />
-              </div>
-              <figcaption class="productInfo">
-                <h3>Vino blanco Etoile</h3>
-                <p>52,33€</p>
-                <a href="">Añadir al carrito</a>
-              </figcaption>
-            </figure>
-            <figure class="productNew" data-type="whiteWine">
-              <div class="scaleProduct">
-                <img
-                  src="images/whiteWineSolstice.jpg"
-                  alt="Imagen de una botella de vino blanco con marca Solstice."
-                />
-              </div>
-              <figcaption class="productInfo">
-                <h3>Vino blanco Solstice</h3>
-                <p>52,33€</p>
-                <a href="">Añadir al carrito</a>
-              </figcaption>
-            </figure>
-            <figure class="productNew" data-type="redWine">
-              <div class="scaleProduct">
-                <img
-                  src="images/redWineAurora.jpg"
-                  alt="Imagen de una botella de vino tinto con marca Aurora."
-                />
-              </div>
-              <figcaption class="productInfo">
-                <h3>Vino tinto Aurora</h3>
-                <p>52,33€</p>
-                <a href="">Añadir al carrito</a>
-              </figcaption>
-            </figure>
-            <figure class="productNew" data-type="redWine">
-              <div class="scaleProduct">
-                <img
-                  src="images/redWineMedianoche.jpg"
-                  alt="Imagen de una botella de vino tinto con marca Medianoche."
-                />
-              </div>
-              <figcaption class="productInfo">
-                <h3>Vino tinto Medianoche</h3>
-                <p>52,33€</p>
-                <a href="">Añadir al carrito</a>
-              </figcaption>
-            </figure>
-            <figure class="productNew" data-type="otherProducts">
-              <div class="scaleProduct">
-                <img
-                  src="images/roxanneCaviar.jpg"
-                  alt="Imagen de una lata de conservas de caviar."
-                />
-              </div>
-              <figcaption class="productInfo">
-                <h3>Caviar</h3>
-                <p>52,33€</p>
-                <a href="">Añadir al carrito</a>
-              </figcaption>
-            </figure>
-          </div>
+          <div class="gridProducts" id="highlightContainer"></div>
         </section>
         <section>
           <h2>Nuestras Ofertas</h2>
-          <div class="gridProducts">
-            <figure class="productNew" data-type="vinos">
-              <div class="scaleProduct">
-                <img
-                  src="images/whiteWineClaire.jpg"
-                  alt="Imagen de una botella de vino blanco con marca Claire."
-                />
-              </div>
-              <figcaption class="productInfo">
-                <h3>Vino blanco Claire</h3>
-                <p>52,33€</p>
-                <a href="">Añadir al carrito</a>
-              </figcaption>
-            </figure>
-
-            <figure class="productNew" data-type="vinos">
-              <div class="scaleProduct">
-                <img
-                  src="images/redWineAurora.jpg"
-                  alt="Imagen de una botella de vino tinto con marca Aurora."
-                />
-              </div>
-              <figcaption class="productInfo">
-                <h3>Vino tinto Aurora</h3>
-                <p>52,33€</p>
-                <a href="">Añadir al carrito</a>
-              </figcaption>
-            </figure>
-            <figure class="productNew" data-type="vinos">
-              <div class="scaleProduct">
-                <img
-                  src="images/cannedOctopus.jpg"
-                  alt="Imagen de una lata de conservas de pulpo."
-                />
-              </div>
-              <figcaption class="productInfo">
-                <h3>Conserva Pulpo</h3>
-                <p>52,33€</p>
-                <a href="">Añadir al carrito</a>
-              </figcaption>
-            </figure>
-          </div>
+          <div class="gridProducts" id="offersContainer"></div>
         </section>
         <section>
           <h2>Opiniones de nuestros clientes</h2>
@@ -211,5 +91,6 @@
       </main>
       <footer></footer>
     </div>
+    <script src="js/index.js"></script>
   </body>
 </html>
