--- a/pages/header.html
+++ b/pages/header.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Los Tres Fogones Selectos - Header</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="/LosTresFogonesSelectos/css/header.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -15,7 +15,7 @@
            
             <div class="logoContainer">
                 <div class="logo">
-                    <img src="Images/logoLosTresFogonesSelectos.png" alt="logoLosTresFogonesSelectos" class="logoImage">
+                    <img src="../Images/logoLosTresFogonesSelectos.png" alt="logoLosTresFogonesSelectos" class="logoImage">
                     <div class="logoText">
                         <h1>Los Tres Fogones Selectos</h1>
                         <p>Vinos · Fiambres · Conservas</p>
@@ -97,8 +97,9 @@
                 </div>
             </div>
         </div>
+        
     </header>
 
-    <script src="header.js"></script>
+    <script src="/LosTresFogonesSelectos/js/header.js"></script>
 </body>
 </html>
