patch:change image footer los tres fogones

--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -83,7 +83,9 @@
                     <h3>JAVIER</h3>
                     <p>Javier es nuestro increíble relaciones públicas. Su trato es inmejorable tanto con clientes como
                         con proveedores.Los clientes lo adoran por su trato jovial y encantador donde aconseja en todo
-                        lo necesario a los clientes.</p>
+                        lo necesario a los clientes.
+                        Un experto en su rama.
+                    </p>
                 </div>
             </div>
 
