post:change form font to bold

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -29,18 +29,18 @@
 
         <form action="mailto:lostresfogonesselectos@gmail.com" method="post" enctype="text/plain">
             
-            <label>Nombre:</label>
+            <label><b>Nombre:</b></label>
             <input type="text" name="name" required>
             <br>
 
-            <label>Apellidos:</label>
+            <label><b>Apellidos:</b></label>
             <input type="text" name="surname" required>
             <br>
 
-            <label>E-mail:</label>
+            <label><b>E-mail:</b></label>
             <input type="email" name="mail" required>
             <br>
-            <label>Petición:</label>
+            <label><b>Petición:</b></label>
             <br>
             <textarea name="message" rows="5" cols="30" placeholder="Escribe aquí tu mensaje..." required></textarea>
             <br><br>
