fix:Change cards and fix scroll

--- a/pages/winePage.html
+++ b/pages/winePage.html
@@ -10,14 +10,17 @@
     <link rel="stylesheet" href="../css/footer.css">
 </head>
 <body>
-    <header>
-
-    </header>
+    <div class="pageContent">
+    <header></header>
     <main>
-        <div class="fondo"></div>
-        <h2 class="titleWine">Vinos selectos</h2>
-        <div id="wineSection" class="cardsWine"></div>
+        <div class="wrapper">
+            <div class="fondo"></div>
+            <h2 class="titleWine">Vinos selectos</h2>
+            <div id="wineSection" class="cardsWine"></div>
+        </div>
+        
     </main>
+    </div>
     <script src="../js/winePage.js"></script>
     
 
