--- a/pages/cannedFood.html
+++ b/pages/cannedFood.html
@@ -15,7 +15,7 @@
     <main>
         <div class="wrapper">
             <div class="fondo"></div>
-            <h2 class="titleCannedFood">Conservas selectas</h2>
+            <h1 class="titleCannedFood"><b>Conservas selectas</b></h1>
             <div id="cannedFoodSection" class="cardsCannedFood"></div>
         </div>
         
