--- a/pages/winePage.html
+++ b/pages/winePage.html
@@ -15,7 +15,7 @@
     <main>
         <div class="wrapper">
             <div class="fondo"></div>
-            <h2 class="titleWine">Vinos selectos</h2>
+            <h1 class="titleWine"><b>Vinos selectos</b></h1>
             <div id="wineSection" class="cardsWine"></div>
         </div>
         
