patch:reser all header

--- a/pages/header.html
+++ b/pages/header.html
@@ -64,7 +64,7 @@
 
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#" img="images/logoLosTresFogonesSelectos.png">Inicio</a>
+                    <a class="navbar-brand" href="#" img="images/logoLosTresFogonesSelectos.png">Los tres fogones selectos</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
