--- a/pages/header.html
+++ b/pages/header.html
@@ -1,51 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Los Tres Fogones Selectos</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/css/header.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&family=Lato:wght@300;400;700&display=swap"
-        rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+</head>
 <body>
-    <my-header>
-        <header>
-
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#" img="images/logoLosTresFogonesSelectos.png">Los tres fogones
-                        selectos</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">QUESOS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">VINOS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">CONSERVAS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link">SOBRE NOSOTROS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link">CONTACTO</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+    <header class="mainHeader">
+        <div class="headerContent">
+            <div class="logoSection">
+                <img src="/Images/logoLosTresFogonesSelectos.png" alt="Logo" class="logoImage">
+                <h1 class="headerTitle">Los Tres Fogones Selectos</h1>
+                <hr class="logoUnderline">
+            </div>
+            
+            <nav class="mainNav">
+                <ul class="navList">
+                    <li><a href="#" class="navLink">Quesos</a></li>
+                    <li><a href="#" class="navLink">Vinos</a></li>
+                    <li><a href="#" class="navLink">Conservas</a></li>
+                    <li><a href="#" class="navLink">Sobre Nosotros</a></li>
+                    <li><a href="#" class="navLink active">Contacto</a></li>
+                </ul>
             </nav>
-        </header>
-        <script sr="header.js"></script>
-
+        </div>
+    </header>
 </body>
-
 </html>
