--- a/pages/winePage.html
+++ b/pages/winePage.html
@@ -7,11 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/winePage.css">
+    <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
 </head>
 <body>
     <div class="pageContent">
-    <header></header>
+        <header-los-tres-fogones-selectos></header-los-tres-fogones-selectos>
+    <script src="../js/header.js"></script>
     <main>
         <div class="wrapper">
             <div class="fondo"></div>
