--- a/pages/header.html
+++ b/pages/header.html
@@ -1,81 +1,68 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Los Tres Fogones Selectos</title>
 
-    <!-- Fuentes y estilos -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&family=Lato:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Los Tres Fogones Selectos</title>
 
-    <!-- Bootstrap -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="../css/header.css" />
-  </head>
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary backgroundHeader">
-        <div class="container-fluid">
-          <!-- Logo -->
-          <a class="navbar-brand" href="#">
-            <img
-              src="../Images/logoLosTresFogonesSelectos.png"
-              alt="logo"
-              class="classlogo"
-            />
-            Los tres fogones selectos
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&family=Lato:wght@300;400;700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../css/header.css" />
+  
+</head>
+
+<body>
+  
+  <header>
+    <nav class="navbar navbar-expand-lg  backgroundHeader">
+      <div class="container-fluid">
+        <!-- Logo -->
+        <a class="navbar-brand" href="#">
+          <img src="../Images/logoLosTresFogonesSelectos.png" alt="logo" class="classlogo" />
+          Los tres fogones selectos
+        </a>
+
+        <!-- Botón menú móvil -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Menú -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">QUESOS</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="#">VINOS</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">CONSERVAS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">SOBRE NOSOTROS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">CONTACTO</a>
+            </li>
+          </ul>
+
+          <!-- Carrito -->
+          <a href="#" class="cart-link">
+            <i class="fas fa-shopping-cart"></i>
+            <span class="cart-count"></span>
           </a>
-
-          <!-- Botón menú móvil -->
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <!-- Menú -->
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="#">QUESOS</a>
-              </li>
-              <li class="nav-item"><a class="nav-link" href="#">VINOS</a></li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">CONSERVAS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">SOBRE NOSOTROS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">CONTACTO</a>
-              </li>
-            </ul>
-
-            <!-- Carrito -->
-            <a href="#" class="cart-link">
-              <i class="fas fa-shopping-cart"></i>
-              <span class="cart-count">0</span>
-            </a>
-          </div>
         </div>
-      </nav>
-    </header>
+      </div>
+    </nav>
+  </header>
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="header.js"></script>
-  </body>
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../js/header.js"></script>
+</body>
+
 </html>
