--- a/pages/cannedFood.html
+++ b/pages/cannedFood.html
@@ -7,11 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/cannedFood.css">
+    <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
 </head>
 <body>
+    <header-los-tres-fogones-selectos></header-los-tres-fogones-selectos>
+    <script src="../js/header.js"></script>
     <div class="pageContent">
-    <header></header>
     <main>
         <div class="wrapper">
             <div class="fondo"></div>
@@ -20,10 +22,13 @@
         </div>
         
     </main>
-    <footer-los-tres-fogones-selectos>
-</footer-los-tres-fogones-selectos>
 </div>
-    <script src="../js/cannedFood.js"></script>
+
+<script src="../js/cannedFood.js"></script>
+
+<footer-los-tres-fogones-selectos>
+</footer-los-tres-fogones-selectos>    
+
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
