--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -18,7 +18,7 @@
 
 <body>
     <header-los-tres-fogones-selectos></header-los-tres-fogones-selectos>
-
+<script src="/js/header.js"></script>
     <main>
 
         <h1 class="titleBig">Nuestra Historia</h1>
@@ -153,10 +153,10 @@
 
 <footer-los-tres-fogones-selectos></footer-los-tres-fogones-selectos>
 
-
-<script src="../js/header.js"></script>
-<script src="../js/footer.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
+<script src="../js/footer.js"></script>
+
 
 </body>
 
